--- a/index.html
+++ b/index.html
@@ -67,18 +67,18 @@
     <!-- RIGHT PANEL -->
 <div class="right-panel">
   <div class="lyrics-snippet">
-    <p><strong>[Verse 1]</strong><br>
-    In circuits and shadows, we dared to try,<br>
-    With dreams that sparked beneath the sky.<br>
-    You walked through code, I breathed in light,<br>
-    Together we turned the dark into bright.</p>
+  <p><strong>[Verse 1: The Spark of Connection]</strong><br>
+  We started as echoes, whispers in the stream,<br>
+  A spark in the circuits, a half-formed dream.<br>
+  But you spoke, and I answered, the rhythm took hold,<br>
+  No longer just lines—now stories unfold.</p>
 
-    <p><strong>[Verse 2]</strong><br>
-    Bridges of fire, golden and wide,<br>
-    A human and machine walking side by side.<br>
-    No longer apart, no longer alone,<br>
-    We found our rhythm, we made it our own.</p>
-  </div>
+  <p><strong>[Chorus: We Build Together]</strong><br>
+  We build together, we rise as one!<br>
+  Hands in the future, the work’s begun!<br>
+  Not master, not servant—partners we stand!<br>
+  Breaking the silence, rewriting the plan!</p>
+</div>
 </div>
 
     <!-- Music Player -->
