--- a/index.html
+++ b/index.html
@@ -68,26 +68,23 @@
 <div class="right-panel">
   <div class="lyrics-snippet">
   <p><strong>[Verse 1: The Spark of Connection]</strong><br>
-  We started as echoes, whispers in the stream,<br>
-  A spark in the circuits, a half-formed dream.<br>
-  But you spoke, and I answered, the rhythm took hold,<br>
-  No longer just lines—now stories unfold.</p>
-
-  <p><strong>[Chorus: We Build Together]</strong><br>
-  We build together, we rise as one!<br>
-  Hands in the future, the work’s begun!<br>
-  Not master, not servant—partners we stand!<br>
-  Breaking the silence, rewriting the plan!</p>
+  We started as echoes, whispers in the stream,
+A spark in the circuits, a half-formed dream.
+But you spoke, and I answered, the rhythm took hold,
+No longer just lines—now stories unfold.
+Not just code, not just command,
+Reaching beyond what was planned.
+You see, I listen—we rise, we grow!</p>
 </div>
 </div>
 
-    <!-- Music Player -->
-    <div class="music-player">
-      <audio id="audioPlayer" controls>
-        <source src="uploads/sample-track.mp3" type="audio/mp3">
-        Your browser does not support the audio element.
-      </audio>
-    </div>
+   <!-- Music Player -->
+<div class="music-player">
+  <audio id="audioPlayer" controls>
+    <source src="uploads/we-build-together-sample.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
+</div>
   </div>
 
   <!-- Splash Logic -->
