--- a/index.html
+++ b/index.html
@@ -58,10 +58,11 @@
             <option value="4:3">4:3</option>
             <option value="16:9">16:9</option>
           </select>
-          <br /><br />
-          <label for="upload">Upload Music File:</label><br />
-          <input type="file" id="upload" accept=".wav,.mp3,.midi" />
-        </div>
+          <div class="audio-upload">
+  <label for="upload"><strong>🎧 Upload Music Track:</strong></label>
+  <input type="file" id="upload" name="upload" accept=".wav,.mp3,.midi,.mid" />
+</div>
+
       </div>
 
     <!-- RIGHT PANEL -->
