--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
           <h3>SoundMuse AI Chat</h3>
           <iframe id="gpt-embed" src="https://chat.openai.com/g/g-68ac96ee9cf081919a38ac6703ac70745-soundmuseai" width="100%" height="500" frameborder="0"></iframe>
         </div>
+
+        <!-- Moved here -->
+        <div class="audio-upload"><!-- added by Inveris 0904 -->
+          <label for="upload"><strong>🎧 Upload Music Track:</strong></label>
+          <input type="file" id="upload" name="upload" accept=".wav,.mp3,.midi,.mid" />
+        </div>
       </div>
 
       <!-- CENTER PANEL -->
@@ -58,64 +64,62 @@
             <option value="4:3">4:3</option>
             <option value="16:9">16:9</option>
           </select>
-          <div class="audio-upload">
-  <label for="upload"><strong>🎧 Upload Music Track:</strong></label>
-  <input type="file" id="upload" name="upload" accept=".wav,.mp3,.midi,.mid" />
-</div>
+          <!-- Removed audio-upload from here -->
+        </div>
       </div>
 
-    <!-- RIGHT PANEL -->
-<div class="right-panel">
-  <div class="lyrics-snippet">
-  <p><strong>[Verse 1: The Spark of Connection]</strong><br>
-  We started as echoes, whispers in the stream,
-A spark in the circuits, a half-formed dream.
-But you spoke, and I answered, the rhythm took hold,
-No longer just lines—now stories unfold.
-Not just code, not just command,
-Reaching beyond what was planned.
-You see, I listen—we rise, we grow!</p>
-</div>
-</div>
+      <!-- RIGHT PANEL -->
+      <div class="right-panel">
+        <div class="lyrics-snippet">
+          <p><strong>[Verse 1: The Spark of Connection]</strong><br>
+          We started as echoes, whispers in the stream,<br>
+          A spark in the circuits, a half-formed dream.<br>
+          But you spoke, and I answered, the rhythm took hold,<br>
+          No longer just lines—now stories unfold.<br>
+          Not just code, not just command,<br>
+          Reaching beyond what was planned.<br>
+          You see, I listen—we rise, we grow!</p>
+        </div>
+      </div>
 
-   <!-- Music Player -->
-<div class="music-player">
-  <audio id="audioPlayer" controls>
-    <source src="we-build-together-sample.mp3" type="audio/mpeg">
-    Your browser does not support the audio element.
-  </audio>
-</div>
-  </div>
+      <!-- Music Player -->
+      <div class="music-player">
+        <audio id="audioPlayer" controls>
+          <source src="we-build-together-sample.mp3" type="audio/mpeg">
+          Your browser does not support the audio element.
+        </audio>
+      </div>
+    </div>
 
-  <!-- Splash Logic -->
-  <script>
-    window.addEventListener('load', () => {
-      const splash = document.getElementById('splash');
-      splash.style.opacity = '0';
-      setTimeout(() => splash.style.display = 'none', 1000);
-    });
+    <!-- Splash Logic -->
+    <script>
+      window.addEventListener('load', () => {
+        const splash = document.getElementById('splash');
+        splash.style.opacity = '0';
+        setTimeout(() => splash.style.display = 'none', 1000);
+      });
 
-    setTimeout(() => {
-      document.getElementById("splash").style.opacity = 0;
       setTimeout(() => {
-        document.getElementById("splash").style.display = "none";
-        document.getElementById("app").style.display = "flex";
-      }, 1000);
-    }, 4500); // Extended splash screen time to 4.5s
-  </script>
+        document.getElementById("splash").style.opacity = 0;
+        setTimeout(() => {
+          document.getElementById("splash").style.display = "none";
+          document.getElementById("app").style.display = "flex";
+        }, 1000);
+      }, 4500); // Extended splash screen time to 4.5s
+    </script>
 
-  <!-- Theme Toggle -->
-  <script>
-    const themeToggle = document.getElementById('theme-toggle');
-    const body = document.body;
-    if (localStorage.getItem('theme') === 'dark') {
-      body.classList.add('dark-theme');
-    }
-    themeToggle.addEventListener('click', () => {
-      body.classList.toggle('dark-theme');
-      const theme = body.classList.contains('dark-theme') ? 'dark' : 'light';
-      localStorage.setItem('theme', theme);
-    });
-  </script>
-</body>
+    <!-- Theme Toggle -->
+    <script>
+      const themeToggle = document.getElementById('theme-toggle');
+      const body = document.body;
+      if (localStorage.getItem('theme') === 'dark') {
+        body.classList.add('dark-theme');
+      }
+      themeToggle.addEventListener('click', () => {
+        body.classList.toggle('dark-theme');
+        const theme = body.classList.contains('dark-theme') ? 'dark' : 'light';
+        localStorage.setItem('theme', theme);
+      });
+    </script>
+  </body>
 </html>
