--- a/index.html
+++ b/index.html
@@ -5,6 +5,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>SoundMuse AI</title>
   <link rel="stylesheet" href="styles.css" />
+  <style>
+    @media (max-width: 1024px) {
+      /* Ensure toolbar is scrollable on tablets */
+      .toolbar {
+        overflow-y: auto;
+      }
+
+      /* Limit left-panel from overflowing viewport on tablets */
+      .left-panel {
+        max-height: 80vh;
+        overflow-y: auto;
+      }
+
+      /* Restore image ratio dropdown if hidden */
+      .upload-controls {
+        display: block;
+        padding-top: 10px;
+      }
+    }
+  </style>
 </head>
 <body>
   <!-- Splash Screen -->
@@ -14,7 +34,7 @@
   </div>
 
   <!-- Main App Container -->
-  <div id="app" class="app-container" style="display: none;">
+  <div id="app" style="display: none;">
     <!-- Toolbar / Sidebar -->
     <div class="toolbar">
       <a href="profile.html" class="sidebar-user" title="User Profile">
@@ -34,21 +54,21 @@
     <!-- Main Panels -->
     <div class="main-content">
       <!-- LEFT PANEL -->
-      <div class="left-panel" data-panel="left">
+      <div class="left-panel">
         <div class="chat-box">
           <h3>SoundMuse AI Chat</h3>
           <iframe id="gpt-embed" src="https://chat.openai.com/g/g-68ac96ee9cf081919a38ac6703ac70745-soundmuseai" width="100%" height="500" frameborder="0"></iframe>
         </div>
 
         <!-- Moved here -->
-        <div class="audio-upload"><!-- added by Inveris 0904 -->
+        <div class="audio-upload">
           <label for="upload"><strong>🎧 Upload Music Track:</strong></label>
           <input type="file" id="upload" name="upload" accept=".wav,.mp3,.midi,.mid" />
         </div>
       </div>
 
       <!-- CENTER PANEL -->
-      <div class="center-panel" data-panel="center">
+      <div class="center-panel">
         <div class="spectrogram-box">
           <img src="spectrograph-mock-up.png" alt="Spectrograph placeholder" style="max-width:100%; height:auto;" />
         </div>
@@ -57,7 +77,7 @@
         </div>
         <div class="upload-controls">
           <label for="ratio">Image Ratio:</label>
-          <select id="ratio" tabindex="0">
+          <select id="ratio">
             <option value="1:1">1:1 (Square)</option>
             <option value="3:2">3:2</option>
             <option value="2:3">2:3</option>
@@ -68,7 +88,7 @@
       </div>
 
       <!-- RIGHT PANEL -->
-      <div class="right-panel" data-panel="right">
+      <div class="right-panel">
         <div class="lyrics-snippet">
           <p><strong>[Verse 1: The Spark of Connection]</strong><br>
           We started as echoes, whispers in the stream,<br>
@@ -89,37 +109,36 @@
         </audio>
       </div>
     </div>
-  </div>
 
-  <!-- Splash Logic -->
-  <script>
-    window.addEventListener('load', () => {
-      const splash = document.getElementById('splash');
-      splash.style.opacity = '0';
-      setTimeout(() => splash.style.display = 'none', 1000);
-    });
+    <!-- Splash Logic -->
+    <script>
+      window.addEventListener('load', () => {
+        const splash = document.getElementById('splash');
+        splash.style.opacity = '0';
+        setTimeout(() => splash.style.display = 'none', 1000);
+      });
 
-    setTimeout(() => {
-      document.getElementById("splash").style.opacity = 0;
       setTimeout(() => {
-        document.getElementById("splash").style.display = "none";
-        document.getElementById("app").style.display = "flex";
-      }, 1000);
-    }, 4500); // Extended splash screen time to 4.5s
-  </script>
+        document.getElementById("splash").style.opacity = 0;
+        setTimeout(() => {
+          document.getElementById("splash").style.display = "none";
+          document.getElementById("app").style.display = "flex";
+        }, 1000);
+      }, 4500);
+    </script>
 
-  <!-- Theme Toggle -->
-  <script>
-    const themeToggle = document.getElementById('theme-toggle');
-    const body = document.body;
-    if (localStorage.getItem('theme') === 'dark') {
-      body.classList.add('dark-theme');
-    }
-    themeToggle.addEventListener('click', () => {
-      body.classList.toggle('dark-theme');
-      const theme = body.classList.contains('dark-theme') ? 'dark' : 'light';
-      localStorage.setItem('theme', theme);
-    });
-  </script>
-</body>
+    <!-- Theme Toggle -->
+    <script>
+      const themeToggle = document.getElementById('theme-toggle');
+      const body = document.body;
+      if (localStorage.getItem('theme') === 'dark') {
+        body.classList.add('dark-theme');
+      }
+      themeToggle.addEventListener('click', () => {
+        body.classList.toggle('dark-theme');
+        const theme = body.classList.contains('dark-theme') ? 'dark' : 'light';
+        localStorage.setItem('theme', theme);
+      });
+    </script>
+  </body>
 </html>
