--- a/profile.html
+++ b/profile.html
@@ -10,7 +10,7 @@
       margin: 0;
       font-family: Arial, sans-serif;
       color: white;
-      background: url('background-aurora.png') no-repeat center center fixed;
+      background: url('Background-aurora.png') no-repeat center center fixed;
       background-size: cover;
     }
 
