--- a/profile.html
+++ b/profile.html
@@ -88,10 +88,15 @@
     }
 
     .starling-full {
-      margin-top: 20px;
-      max-width: 100%;
-      height: auto;
-      border-radius: 8px;
+  margin-top: 20px;
+  max-width: 80%;    /* shrink from full width */
+  max-height: 400px; /* cap height */
+  height: auto;
+  border-radius: 8px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto; /* center it */
+  object-fit: contain;
     }
 
     .placeholder-text {
