--- a/index.html
+++ b/index.html
@@ -37,19 +37,25 @@
   <div id="app" style="display: none;">
     <!-- Toolbar / Sidebar -->
     <div class="toolbar">
-      <a href="profile.html" class="sidebar-user" title="User Profile">
-        <img src="starling-head.png" alt="SoundMuse Profile" class="profile-pic" />
-        <span class="sidebar-username">SoundMuse</span>
-      </a>
-      <button title="Home">🏠</button>
-      <button title="My Uploads">⬆️</button>
-      <button title="Search">🔍</button>
-      <button title="Saved Chats">💬</button>
-      <button title="Saved Lyrics">📝</button>
-      <button title="Download">⬇️</button>
-      <button title="More">⋯</button>
-      <button id="theme-toggle" title="Toggle Light/Dark Mode">🌗</button>
-    </div>
+  <a href="profile.html" class="sidebar-user" title="User Profile">
+    <img src="starling-head.png" alt="SoundMuse Profile" class="profile-pic" />
+    <span class="sidebar-username">SoundMuse</span>
+  </a>
+
+  <!-- ✅ Icon images with links -->
+  <a href="index.html" title="Home"><img src="icons/home.png" alt="Home" class="icon" /></a>
+  <a href="uploads.html" title="My Uploads"><img src="icons/upload.png" alt="Uploads" class="icon" /></a>
+  <a href="search.html" title="Search"><img src="icons/search.png" alt="Search" class="icon" /></a>
+  <a href="saved-chats.html" title="Saved Chats"><img src="icons/chat.png" alt="Saved Chats" class="icon" /></a>
+  <a href="saved-lyrics.html" title="Saved Lyrics"><img src="icons/lyrics.png" alt="Saved Lyrics" class="icon" /></a>
+  <a href="Download-UI.html" title="Download"><img src="icons/download.png" alt="Download" class="icon" /></a>
+
+  <!-- “…” placeholder unchanged -->
+  <div style="margin: 12px 0;">...</div>
+
+  <!-- 🔦 Keep theme toggle exactly as-is -->
+  <button id="theme-toggle" title="Toggle Light/Dark Mode">🌗</button>
+</div>
 
     <!-- Main Panels -->
     <div class="main-content">
