--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
         display: block;
         padding-top: 10px;
       }
+      /* Resize homepage artwork so it doesn't push upload below the player */
+.image-box img {
+  max-width: 80%;
+  max-height: 250px;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+  border-radius: 6px;
     }
   </style>
 </head>
