--- a/profile.html
+++ b/profile.html
@@ -126,7 +126,7 @@
       <a href="saved-lyrics.html"><img src="icons/lyrics.png" alt="Lyrics" class="icon" /></a>
       <a href="Download-UI.html"><img src="icons/download.png" alt="Download" class="icon" /></a>
       <div style="margin: 12px 0;">...</div>
-      <a href="#"><img src="icons/theme-toggle.png" alt="Theme" class="icon" /></a>
+     <button id="theme-toggle" title="Toggle Light/Dark Mode">🌗</button>
     </div>
 
     <div class="main-content">
