--- a/uploads.html
+++ b/uploads.html
@@ -23,6 +23,7 @@
         <li>🎵 demo-neverknowuntilyoutry.wav</li>
         <li>🎶 mysterymuse.MP3</li>
         <li>🎼 wentforgold.midi</li>
+        <li>🎵 We-Build-Together.mp3</li>
       </ul>
       <p class="note">* Spectrograph viewer to be included in future mock-up phase.</p>
     </section>
