--- a/uploads.html
+++ b/uploads.html
@@ -16,15 +16,33 @@
     </nav>
   </header>
 
+  <!-- Sidebar container -->
+  <aside class="sidebar">
+    <div class="sidebar-profile">
+      <img src="images/starling-icon.png" alt="SoundMuseAI Icon" class="starling-avatar">
+      <span class="sidebar-label">SoundMuse</span>
+    </div>
+    <ul class="sidebar-nav">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="profile.html">Profile</a></li>
+      <li><a href="uploads.html" class="active">My Uploads</a></li>
+      <li><a href="#">Search</a></li>
+      <li><a href="#">Chat</a></li>
+      <li><a href="#">Lyrics</a></li>
+      <li><a href="#">Download</a></li>
+      <li><a href="#">...</a></li>
+    </ul>
+  </aside>
+
   <main class="uploads-container">
     <section class="uploads-list">
       <h2>📁 Uploaded Files</h2>
       <ul>
         <li>🎵 demo-neverknowuntilyoutry.wav</li>
         <li>🎶 mysterymuse.MP3</li>
+        <li>🎶 We-Build-Together.mp3</li>
         <li>🎼 wentforgold.midi</li>
-        <li>🎵 We-Build-Together.mp3</li>
-      </ul>
+        </ul>
       <p class="note">* Spectrograph viewer to be included in future mock-up phase.</p>
     </section>
   </main>
